--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,8 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
+    "react",
+    "es2015",
+    "stage-1"
   ],
-  "plugins": [
-
-  ],
-
+  "plugins": ["transform-decorators-legacy" /* should always be the first plugin! */]
 }
