--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.1.0",
+    "mobx": "^3.0.0",
+    "mobx-react": "^4.1.0",
+    "mobx-react-devtools": "^4.2.11",
     "mongoose": "^5.0.11",
     "node-sass": "^4.7.2",
     "nodemon": "^1.17.2",
     "postcss-loader": "^2.1.3",
-    "mobx": "^3.0.0",
-    "mobx-react": "^4.1.0",
-    "mobx-react-devtools": "^4.2.11",
     "react": "^16.2.0",
+    "react-d3-tooltip": "^1.4.14",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "react-materialize": "^2.2.1",
